--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,16 @@ language: cpp
 compiler: gcc
 
 before_script:
+        - mkdir systemc
+        - wget https://accellera.org/images/downloads/standards/systemc/systemc-2.3.3.zip
+        - unzip systemc-2.3.3.zip
+        - cd systemc-2.3.3
+        - mkdir objdir
+        - cd objdir
+        - ../configure --prefix=/usr/local/systemc-2.2.3
+        - sudo mkdir /usr/local/systemc-2.3.3
+        - sudo make install
+        - cd ../..
         - cd Software
         - mkdir build
         - cd build
