--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ before_script:
         - mkdir objdir
         - cd objdir
         - ../configure --prefix=/usr/local/systemc-2.2.3
+        - make -j
         - sudo mkdir /usr/local/systemc-2.3.3
         - sudo make install
         - cd ../..
