--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ language: cpp
 
 compiler: gcc
 
+before_install:
+        -sudo apt install libraw-dev
+
 before_script:
         - mkdir systemc
         - wget https://accellera.org/images/downloads/standards/systemc/systemc-2.3.1a.tar.gz
