--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ compiler: gcc
 
 before_install:
         - sudo apt update
-          sudo apt -y install libraw-dev
+        - sudo apt -y install libraw-dev
 
 before_script:
         - mkdir systemc
