--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ Software/cmake-build-debug/
 
 Algorithm_OpenCV/.idea/
 Algorithm_OpenCV/cmake-build-debug/
+Algorithm_OpenCV/opencv/
 
 */pikes-peak.nef
 */test.tiff
